--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "db.js",
   "scripts": {
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "node server",
     "start:dev": "nodemon server.js"
   },
   "repository": {
@@ -21,7 +22,8 @@
   "homepage": "https://github.com/kebinghill/dealers_choice_pg#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "pg": "^8.5.1"
+    "pg": "^8.5.1",
+    "webpack": "^5.24.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
